--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta charset="utf-8"/>
   <meta content="width=device-width, initial-scale=1" name="viewport"/>
   <title>
-   Portfolio Jean Dupont
+   Portfolio Carboni Leo
   </title>
   <script src="https://cdn.tailwindcss.com">
   </script>
@@ -17,7 +17,7 @@
   <header class="fixed top-0 left-0 right-0 bg-[#f5f0e9] z-50 shadow-sm border-b border-[#f2994a]">
    <nav class="max-w-7xl mx-auto flex items-center justify-between px-6 py-5 rounded-tl-xl rounded-tr-xl">
     <a class="text-3xl font-playfair font-bold text-[#f2994a] tracking-wide" href="#home" tabindex="0">
-     Jean Dupont
+     Carboni Leo
     </a>
     <ul class="hidden md:flex space-x-12 text-[#1a1a1a] font-semibold text-lg">
      <li>
@@ -76,14 +76,14 @@
    <section class="mb-24 flex flex-col md:flex-row items-center md:items-start gap-12" id="home">
     <div class="md:w-1/2 text-center md:text-left">
      <h1 class="text-5xl md:text-6xl font-playfair font-bold text-[#f2994a] leading-tight mb-6 rounded-lg">
-      Jean Dupont
+      Carboni Leo
      </h1>
      <p class="text-lg md:text-xl text-[#1a1a1a]/90 max-w-md mx-auto md:mx-0 rounded-lg">
       Développeur web passionné, créant des expériences numériques simples, élégantes et fonctionnelles.
      </p>
     </div>
     <div class="md:w-1/2 max-w-xs mx-auto md:mx-0 rounded-xl overflow-hidden shadow-lg">
-     <img alt="Portrait minimaliste de Jean Dupont, homme souriant, fond beige avec touches orange, style épuré, petit format" class="object-cover w-full h-full" height="300" src="https://storage.googleapis.com/a1aa/image/ef55e663-d585-459b-7548-34e79112b041.jpg" width="300"/>
+     <img alt="Portrait minimaliste de Carboni Leo, homme souriant, fond beige avec touches orange, style épuré, petit format" class="object-cover w-full h-full" height="300" src="https://storage.googleapis.com/a1aa/image/ef55e663-d585-459b-7548-34e79112b041.jpg" width="300"/>
     </div>
    </section>
    <!-- CV Section -->
