--- a/index.html
+++ b/index.html
@@ -72,18 +72,19 @@
    </div>
   </header>
   <main class="flex-grow pt-24 max-w-5xl mx-auto px-6">
-   <!-- Hero Section -->
+   <!-- presentation Section -->
    <section class="mb-24 flex flex-col md:flex-row items-center md:items-start gap-12" id="home">
     <div class="md:w-1/2 text-center md:text-left">
      <h1 class="text-5xl md:text-6xl font-playfair font-bold text-[#f2994a] leading-tight mb-6 rounded-lg">
       Carboni Leo
      </h1>
      <p class="text-lg md:text-xl text-[#1a1a1a]/90 max-w-md mx-auto md:mx-0 rounded-lg">
-      Développeur web passionné, créant des expériences numériques simples, élégantes et fonctionnelles.
+        Bienvenue sur mon portfolio !
+        Je suis un jeune développeur web passionné, prêt à donner vie à des projets modernes, créatifs et efficaces.
      </p>
     </div>
     <div class="md:w-1/2 max-w-xs mx-auto md:mx-0 rounded-xl overflow-hidden shadow-lg">
-     <img alt="Portrait minimaliste de Carboni Leo, homme souriant, fond beige avec touches orange, style épuré, petit format" class="object-cover w-full h-full" height="300" src="https://storage.googleapis.com/a1aa/image/ef55e663-d585-459b-7548-34e79112b041.jpg" width="300"/>
+     <img  class="object-cover w-full h-full" height="300" src="images/portrait.png" width="300"/>
     </div>
    </section>
    <!-- CV Section -->
@@ -98,19 +99,25 @@
       </h3>
       <ul class="list-disc list-inside space-y-3 text-lg font-medium">
        <li>
-        HTML5, CSS3, JavaScript, Tailwind CSS
+        Logiciels : Modelio, Eclipse, VS Code,
+        Suite Office
        </li>
        <li>
-        React, Vue.js
+        Langages : HTML, CSS, Java, JavaScript
        </li>
        <li>
-        Node.js, Express
+        Curieux, Rigoureux, Esprit d’équipe
        </li>
        <li>
-        Bases de données SQL &amp; NoSQL
+        Créatif et aime la résolution de
+problèmes, Esprit d’équipe et
+collaboration, Adaptabilité et
+apprentissageSoft
        </li>
        <li>
-        Git &amp; GitHub
+        Langue:
+Anglais : Courant (B2),
+Italien : Intermédiaire (B1)
        </li>
       </ul>
      </div>
@@ -121,31 +128,31 @@
       <div class="space-y-8 text-lg font-medium">
        <div>
         <p class="font-semibold text-[#f2994a] text-xl mb-1">
-         Développeur Web - Agence Web XYZ
+            STAGIAIRE EN DÉVELOPPEMENT - LYCEE GUSTAVE FLAUBERT  
         </p>
         <p class="italic text-[#1a1a1a]/80 mb-1">
-         2019 - Présent
+        Janvier - Février 2025
         </p>
         <p>
-         Création et maintenance de sites web clients, optimisation SEO, intégration responsive.
+            Participation a la création d’une application de gestion de vente, Collaboration avec un équipier.
         </p>
        </div>
        <div>
         <p class="font-semibold text-[#f2994a] text-xl mb-1">
-         Stagiaire Développeur - Startup ABC
+        STAGIAIRE EN DÉVELOPPEMENT - SANOFI
         </p>
         <p class="italic text-[#1a1a1a]/80 mb-1">
-         2018 - 2019
+        Juin - Juillet 2024
         </p>
         <p>
-         Participation au développement d'une application mobile avec React Native.
+        Participation a la modification d’une application IHM, Collaboration avec l’équipe de développement.
         </p>
        </div>
       </div>
      </div>
     </div>
     <div class="mt-12 text-center">
-     <a class="inline-block bg-[#f2994a] text-white font-semibold px-10 py-4 rounded-full shadow-lg hover:bg-[#d87a2a] transition-colors duration-300" href="https://example.com/cv-jean-dupont.pdf" target="_blank" tabindex="0">
+     <a class="inline-block bg-[#f2994a] text-white font-semibold px-10 py-4 rounded-full shadow-lg hover:bg-[#d87a2a] transition-colors duration-300" href="CV_CarboniLeo.pdf" target="_blank" tabindex="0">
       <i class="fas fa-download mr-3">
       </i>
       Télécharger mon CV
