--- a/index.html
+++ b/index.html
@@ -83,8 +83,8 @@
         Je suis un jeune développeur web passionné, prêt à donner vie à des projets modernes, créatifs et efficaces.
      </p>
     </div>
-    <div class="md:w-1/2 max-w-xs mx-auto md:mx-0 rounded-xl overflow-hidden shadow-lg">
-     <img  class="object-cover w-full h-full" height="300" src="images/portrait.png" width="300"/>
+    <div class="md:w-1/2 max-w-xs mx-auto md:mx-0 rounded-xl overflow-hidden shadow-lg" style="height: 350px; width: 300px;">
+     <img  class="object-cover w-full h-full" src="images/portrait.png"/>
     </div>
    </section>
    <!-- CV Section -->
@@ -160,115 +160,50 @@ Italien : Intermédiaire (B1)
     </div>
    </section>
    <!-- Projets Section -->
-   <section class="mb-24" id="projets">
+   <section class="mb-24" id="projets" aria-label="Section Mes Projets">
     <h2 class="text-4xl font-playfair font-bold text-[#f2994a] mb-12 border-b-2 border-[#f2994a] pb-2 max-w-max rounded-tl-xl rounded-tr-xl">
-     Mes Projets
+      Mes Projets
     </h2>
-    <div aria-label="Galerie de projets" class="flex space-x-8 overflow-x-auto pb-6 scrollbar-thin scrollbar-thumb-[#f2994a] scrollbar-track-[#f5f0e9] no-scrollbar-scrollbar rounded-3xl" tabindex="0">
-     <article class="min-w-[320px] bg-white rounded-3xl shadow-lg flex-shrink-0 flex flex-col overflow-hidden hover:shadow-2xl transition-shadow duration-300">
-      <img alt="Capture d'écran d'une application web de gestion de tâches avec interface épurée beige et orange" class="w-full h-48 object-cover rounded-t-3xl" height="200" src="https://storage.googleapis.com/a1aa/image/b580195d-e87c-425d-ccbb-dd5485e08f7c.jpg" width="320"/>
-      <div class="p-6 flex flex-col flex-grow rounded-b-3xl">
-       <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a]">
-        Application de gestion de tâches
-       </h3>
-       <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed">
-        Une application web simple pour organiser et suivre vos tâches quotidiennes avec une interface intuitive.
-       </p>
-       <a class="text-[#f2994a] font-semibold hover:underline flex items-center gap-2 rounded-md focus:outline-none focus:ring-2 focus:ring-[#f2994a]" href="https://github.com/jeandupont/gestion-taches" target="_blank" tabindex="0">
-        <i class="fab fa-github text-xl">
-        </i>
-        Voir sur GitHub
-       </a>
-      </div>
-     </article>
-     <article class="min-w-[320px] bg-white rounded-3xl shadow-lg flex-shrink-0 flex flex-col overflow-hidden hover:shadow-2xl transition-shadow duration-300">
-      <img alt="Capture d'écran d'un site vitrine pour artiste avec design minimaliste beige et orange" class="w-full h-48 object-cover rounded-t-3xl" height="200" src="https://storage.googleapis.com/a1aa/image/1485b5b4-4f76-446a-4576-8c4221cb26a0.jpg" width="320"/>
-      <div class="p-6 flex flex-col flex-grow rounded-b-3xl">
-       <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a]">
-        Site vitrine pour artiste
-       </h3>
-       <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed">
-        Un site web élégant pour présenter les œuvres d'un artiste, avec galerie et formulaire de contact.
-       </p>
-       <a class="text-[#f2994a] font-semibold hover:underline flex items-center gap-2 rounded-md focus:outline-none focus:ring-2 focus:ring-[#f2994a]" href="https://github.com/jeandupont/site-artiste" target="_blank" tabindex="0">
-        <i class="fab fa-github text-xl">
-        </i>
-        Voir sur GitHub
-       </a>
-      </div>
-     </article>
-     <article class="min-w-[320px] bg-white rounded-3xl shadow-lg flex-shrink-0 flex flex-col overflow-hidden hover:shadow-2xl transition-shadow duration-300">
-      <img alt="Capture d'écran d'un blog personnel avec CMS, design épuré beige et orange" class="w-full h-48 object-cover rounded-t-3xl" height="200" src="https://storage.googleapis.com/a1aa/image/8ce39609-17c0-4d05-e8b9-6050c3eec9e7.jpg" width="320"/>
-      <div class="p-6 flex flex-col flex-grow rounded-b-3xl">
-       <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a]">
-        Blog personnel avec CMS
-       </h3>
-       <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed">
-        Un blog personnel facile à gérer avec un système de gestion de contenu simple et efficace.
-       </p>
-       <a class="text-[#f2994a] font-semibold hover:underline flex items-center gap-2 rounded-md focus:outline-none focus:ring-2 focus:ring-[#f2994a]" href="https://github.com/jeandupont/blog-cms" target="_blank" tabindex="0">
-        <i class="fab fa-github text-xl">
-        </i>
-        Voir sur GitHub
-       </a>
-      </div>
-     </article>
-     <article class="min-w-[320px] bg-white rounded-3xl shadow-lg flex-shrink-0 flex flex-col overflow-hidden hover:shadow-2xl transition-shadow duration-300">
-      <img alt="Capture d'écran d'une application de recettes de cuisine avec interface beige et orange" class="w-full h-48 object-cover rounded-t-3xl" height="200" src="https://storage.googleapis.com/a1aa/image/13d05206-ba39-4195-23bd-bf45444956b7.jpg" width="320"/>
-      <div class="p-6 flex flex-col flex-grow rounded-b-3xl">
-       <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a]">
-        Application de recettes de cuisine
-       </h3>
-       <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed">
-        Une application web pour rechercher, sauvegarder et partager des recettes de cuisine facilement.
-       </p>
-       <a class="text-[#f2994a] font-semibold hover:underline flex items-center gap-2 rounded-md focus:outline-none focus:ring-2 focus:ring-[#f2994a]" href="https://github.com/jeandupont/app-recettes" target="_blank" tabindex="0">
-        <i class="fab fa-github text-xl">
-        </i>
-        Voir sur GitHub
-       </a>
-      </div>
-     </article>
-     <article class="min-w-[320px] bg-white rounded-3xl shadow-lg flex-shrink-0 flex flex-col overflow-hidden hover:shadow-2xl transition-shadow duration-300">
-      <img alt="Capture d'écran d'un portfolio pour photographe avec design épuré beige et orange" class="w-full h-48 object-cover rounded-t-3xl" height="200" src="https://storage.googleapis.com/a1aa/image/93453c67-54a3-4b56-ed00-a9a0dffb7acd.jpg" width="320"/>
-      <div class="p-6 flex flex-col flex-grow rounded-b-3xl">
-       <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a]">
-        Portfolio photographe
-       </h3>
-       <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed">
-        Un portfolio en ligne pour un photographe, mettant en valeur ses meilleures photos avec un design minimaliste.
-       </p>
-       <a class="text-[#f2994a] font-semibold hover:underline flex items-center gap-2 rounded-md focus:outline-none focus:ring-2 focus:ring-[#f2994a]" href="https://github.com/jeandupont/portfolio-photographe" target="_blank" tabindex="0">
-        <i class="fab fa-github text-xl">
-        </i>
-        Voir sur GitHub
-       </a>
-      </div>
-     </article>
-     <article class="min-w-[320px] bg-white rounded-3xl shadow-lg flex-shrink-0 flex flex-col overflow-hidden hover:shadow-2xl transition-shadow duration-300">
-      <img alt="Capture d'écran d'un site e-commerce minimaliste avec palette beige et orange" class="w-full h-48 object-cover rounded-t-3xl" height="200" src="https://storage.googleapis.com/a1aa/image/d36804f0-1f40-4a01-678d-bcc4696f7ef3.jpg" width="320"/>
-      <div class="p-6 flex flex-col flex-grow rounded-b-3xl">
-       <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a]">
-        Site e-commerce minimaliste
-       </h3>
-       <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed">
-        Un site e-commerce simple et épuré, optimisé pour une expérience utilisateur fluide et agréable.
-       </p>
-       <a class="text-[#f2994a] font-semibold hover:underline flex items-center gap-2 rounded-md focus:outline-none focus:ring-2 focus:ring-[#f2994a]" href="https://github.com/jeandupont/ecommerce-minimaliste" target="_blank" tabindex="0">
-        <i class="fab fa-github text-xl">
-        </i>
-        Voir sur GitHub
-       </a>
-      </div>
-     </article>
-    </div>
-   </section>
+    <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 max-w-5xl mx-auto">
+      <a href="https://github.com/LeoC76/Projet3Web" target="_blank" tabindex="0" class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
+        <img alt="Capture d'écran d'une application web de gestion de formations" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/easyBeeFormation.png" width="320" height="224" />
+        <div class="p-6 flex flex-col h-full rounded-b-3xl">
+          <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
+            Application de gestion de tâches
+          </h3>
+          <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed text-sm sm:text-base">
+            Une application web simple pour organiser et suivre vos tâches quotidiennes avec une interface intuitive.
+          </p>
+          <div class="text-[#f2994a] font-semibold flex items-center gap-2 text-base">
+            <i class="fab fa-github text-xl"></i>
+            Voir sur GitHub
+          </div>
+        </div>
+      </a>
+
+      <a href="https://github.com/Fearoxeuh/EasybeeJava" target="_blank" tabindex="0" class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
+        <img alt="Capture d'écran d'un site vitrine pour artiste avec design minimaliste beige et orange" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/siteArtiste.png" width="320" height="224" />
+        <div class="p-6 flex flex-col h-full rounded-b-3xl">
+          <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
+            Site vitrine pour artiste
+          </h3>
+          <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed text-sm sm:text-base">
+            Un site web élégant pour présenter les œuvres d'un artiste, avec galerie et formulaire de contact.
+          </p>
+          <div class="text-[#f2994a] font-semibold flex items-center gap-2 text-base">
+            <i class="fab fa-github text-xl"></i>
+            Voir sur GitHub
+          </div>
+        </div>
+      </a>
+    </section>
+   
    <!-- Contact Section -->
    <section class="mb-24 max-w-3xl mx-auto" id="contact">
     <h2 class="text-4xl font-playfair font-bold text-[#f2994a] mb-12 border-b-2 border-[#f2994a] pb-2 max-w-max rounded-tl-xl rounded-tr-xl">
      Contactez-moi
     </h2>
-    <form action="mailto:jean.dupont@example.com" class="bg-white rounded-3xl shadow-lg p-10 flex flex-col gap-8" enctype="text/plain" method="POST">
+    <form action="mailto:leocarboni76@gmail.com" class="bg-white rounded-3xl shadow-lg p-10 flex flex-col gap-8" enctype="text/plain" method="POST">
      <div>
       <label class="block mb-3 font-semibold text-lg text-[#1a1a1a]" for="name">
        Nom
