--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@ Italien : Intermédiaire (B1)
       </a>
 
       <a href="https://github.com/Fearoxeuh/EasybeeJava" target="_blank" tabindex="0" class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
-        <img alt="Capture d'écran d'un site vitrine pour artiste avec design minimaliste beige et orange" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/siteArtiste.png" width="320" height="224" />
+        <img alt="Capture d'écran d'une application de gestion des stock" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/GestionStock.png" width="320" height="224" />
         <div class="p-6 flex flex-col h-full rounded-b-3xl">
           <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
             Site vitrine pour artiste
@@ -228,6 +228,12 @@ Italien : Intermédiaire (B1)
       Envoyer
      </button>
     </form>
+   </section>
+   <section class="mb-24 max-w-3xl mx-auto" id="veille">
+    <h2 class="text-4xl font-playfair font-bold text-[#f2994a] mb-12 border-b-2 border-[#f2994a] pb-2 max-w-max rounded-tl-xl rounded-tr-xl">
+        Veille
+       </h2>
+       
    </section>
   </main>
   <footer class="bg-[#f5f0e9] border-t border-[#f2994a] py-8 text-center text-[#1a1a1a]/70 text-sm rounded-bl-xl rounded-br-xl">
