--- a/index.html
+++ b/index.html
@@ -36,10 +36,16 @@
       </a>
      </li>
      <li>
+      <a class="hover:text-[#f2994a] transition-colors duration-300 rounded-md px-2 py-1 focus:outline-none focus:ring-2 focus:ring-[#f2994a]" href="#veille" tabindex="0">
+       Veille
+      </a>
+     </li>
+     <li>
       <a class="hover:text-[#f2994a] transition-colors duration-300 rounded-md px-2 py-1 focus:outline-none focus:ring-2 focus:ring-[#f2994a]" href="#contact" tabindex="0">
        Contact
       </a>
      </li>
+     
     </ul>
     <button aria-label="Ouvrir le menu" class="md:hidden focus:outline-none" id="menu-btn" tabindex="0">
      <i class="fas fa-bars text-2xl text-[#f2994a]">
@@ -169,10 +175,10 @@ Italien : Intermédiaire (B1)
         <img alt="Capture d'écran d'une application web de gestion de formations" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/easyBeeFormation.png" width="320" height="224" />
         <div class="p-6 flex flex-col h-full rounded-b-3xl">
           <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
-            Application de gestion de tâches
+            Une application web qui permet de gérer des formations.
           </h3>
           <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed text-sm sm:text-base">
-            Une application web simple pour organiser et suivre vos tâches quotidiennes avec une interface intuitive.
+            Une application web qui permet de gérer des formations pour l'entreprise EasyBee.
           </p>
           <div class="text-[#f2994a] font-semibold flex items-center gap-2 text-base">
             <i class="fab fa-github text-xl"></i>
@@ -181,6 +187,36 @@ Italien : Intermédiaire (B1)
         </div>
       </a>
 
+      <a href="https://github.com/Fearoxeuh/EasybeeJava" target="_blank" tabindex="0" class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
+        <img alt="Capture d'écran d'une application de gestion des stock" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/GestionStock.png" width="320" height="224" />
+        <div class="p-6 flex flex-col h-full rounded-b-3xl">
+          <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
+            Application java de gestion de stock
+          </h3>
+          <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed text-sm sm:text-base">
+            Une application java qui permet de gérer les stocks pour relier l'entrepot et le magasin.
+          </p>
+          <div class="text-[#f2994a] font-semibold flex items-center gap-2 text-base">
+            <i class="fab fa-github text-xl"></i>
+            Voir sur GitHub
+          </div>
+        </div>
+      </a>
+      <a href="https://github.com/Fearoxeuh/EasybeeJava" target="_blank" tabindex="0" class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
+        <img alt="Capture d'écran d'une application de gestion des stock" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/GestionStock.png" width="320" height="224" />
+        <div class="p-6 flex flex-col h-full rounded-b-3xl">
+          <h3 class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
+            Site vitrine pour artiste
+          </h3>
+          <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed text-sm sm:text-base">
+            Un site web élégant pour présenter les œuvres d'un artiste, avec galerie et formulaire de contact.
+          </p>
+          <div class="text-[#f2994a] font-semibold flex items-center gap-2 text-base">
+            <i class="fab fa-github text-xl"></i>
+            Voir sur GitHub
+          </div>
+        </div>
+      </a>
       <a href="https://github.com/Fearoxeuh/EasybeeJava" target="_blank" tabindex="0" class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
         <img alt="Capture d'écran d'une application de gestion des stock" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/GestionStock.png" width="320" height="224" />
         <div class="p-6 flex flex-col h-full rounded-b-3xl">
@@ -197,38 +233,7 @@ Italien : Intermédiaire (B1)
         </div>
       </a>
     </section>
-   
-   <!-- Contact Section -->
-   <section class="mb-24 max-w-3xl mx-auto" id="contact">
-    <h2 class="text-4xl font-playfair font-bold text-[#f2994a] mb-12 border-b-2 border-[#f2994a] pb-2 max-w-max rounded-tl-xl rounded-tr-xl">
-     Contactez-moi
-    </h2>
-    <form action="mailto:leocarboni76@gmail.com" class="bg-white rounded-3xl shadow-lg p-10 flex flex-col gap-8" enctype="text/plain" method="POST">
-     <div>
-      <label class="block mb-3 font-semibold text-lg text-[#1a1a1a]" for="name">
-       Nom
-      </label>
-      <input class="w-full border border-[#f2994a] rounded-xl px-5 py-3 text-lg placeholder-[#d87a2a]/70 focus:outline-none focus:ring-2 focus:ring-[#f2994a]" id="name" name="Nom" placeholder="Votre nom" required="" type="text"/>
-     </div>
-     <div>
-      <label class="block mb-3 font-semibold text-lg text-[#1a1a1a]" for="email">
-       Email
-      </label>
-      <input class="w-full border border-[#f2994a] rounded-xl px-5 py-3 text-lg placeholder-[#d87a2a]/70 focus:outline-none focus:ring-2 focus:ring-[#f2994a]" id="email" name="Email" placeholder="votre.email@example.com" required="" type="email"/>
-     </div>
-     <div>
-      <label class="block mb-3 font-semibold text-lg text-[#1a1a1a]" for="message">
-       Message
-      </label>
-      <textarea class="w-full border border-[#f2994a] rounded-xl px-5 py-3 text-lg placeholder-[#d87a2a]/70 focus:outline-none focus:ring-2 focus:ring-[#f2994a]" id="message" name="Message" placeholder="Votre message" required="" rows="5"></textarea>
-     </div>
-     <button class="self-start bg-[#f2994a] text-white font-semibold text-lg rounded-full px-12 py-4 shadow-lg hover:bg-[#d87a2a] transition-colors duration-300 flex items-center gap-3" type="submit" tabindex="0">
-      <i class="fas fa-paper-plane">
-      </i>
-      Envoyer
-     </button>
-    </form>
-   </section>
+   <!-- Veille section -->
    <section class="mb-24 max-w-3xl mx-auto" id="veille">
     <h2 class="text-4xl font-playfair font-bold text-[#f2994a] mb-12 border-b-2 border-[#f2994a] pb-2 max-w-max rounded-tl-xl rounded-tr-xl">
       Veille
@@ -288,6 +293,37 @@ Italien : Intermédiaire (B1)
           
         </div>
       </div>
+   </section>
+   <!-- Contact Section -->
+   <section class="mb-24 max-w-3xl mx-auto" id="contact">
+    <h2 class="text-4xl font-playfair font-bold text-[#f2994a] mb-12 border-b-2 border-[#f2994a] pb-2 max-w-max rounded-tl-xl rounded-tr-xl">
+     Contactez-moi
+    </h2>
+    <form action="mailto:leocarboni76@gmail.com" class="bg-white rounded-3xl shadow-lg p-10 flex flex-col gap-8" enctype="text/plain" method="POST">
+     <div>
+      <label class="block mb-3 font-semibold text-lg text-[#1a1a1a]" for="name">
+       Nom
+      </label>
+      <input class="w-full border border-[#f2994a] rounded-xl px-5 py-3 text-lg placeholder-[#d87a2a]/70 focus:outline-none focus:ring-2 focus:ring-[#f2994a]" id="name" name="Nom" placeholder="Votre nom" required="" type="text"/>
+     </div>
+     <div>
+      <label class="block mb-3 font-semibold text-lg text-[#1a1a1a]" for="email">
+       Email
+      </label>
+      <input class="w-full border border-[#f2994a] rounded-xl px-5 py-3 text-lg placeholder-[#d87a2a]/70 focus:outline-none focus:ring-2 focus:ring-[#f2994a]" id="email" name="Email" placeholder="votre.email@example.com" required="" type="email"/>
+     </div>
+     <div>
+      <label class="block mb-3 font-semibold text-lg text-[#1a1a1a]" for="message">
+       Message
+      </label>
+      <textarea class="w-full border border-[#f2994a] rounded-xl px-5 py-3 text-lg placeholder-[#d87a2a]/70 focus:outline-none focus:ring-2 focus:ring-[#f2994a]" id="message" name="Message" placeholder="Votre message" required="" rows="5"></textarea>
+     </div>
+     <button class="self-start bg-[#f2994a] text-white font-semibold text-lg rounded-full px-12 py-4 shadow-lg hover:bg-[#d87a2a] transition-colors duration-300 flex items-center gap-3" type="submit" tabindex="0">
+      <i class="fas fa-paper-plane">
+      </i>
+      Envoyer
+     </button>
+    </form>
    </section>
   </main>
   <footer class="bg-[#f5f0e9] border-t border-[#f2994a] py-8 text-center text-[#1a1a1a]/70 text-sm rounded-bl-xl rounded-br-xl">
