added veille in mobile navbar

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
         </li>
         <li>
           <a class="block hover:text-[#f2994a] transition-colors duration-300 rounded-md px-2 py-1 focus:outline-none focus:ring-2 focus:ring-[#f2994a]"
+            href="#veille" tabindex="0">
+            Veilles
+          </a>
+        </li>
+        <li>
+          <a class="block hover:text-[#f2994a] transition-colors duration-300 rounded-md px-2 py-1 focus:outline-none focus:ring-2 focus:ring-[#f2994a]"
             href="#contact" tabindex="0">
             Contact
           </a>
