--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
       </div>
       <div class="mt-12 text-center">
         <a class="inline-block bg-[#f2994a] text-white font-semibold px-10 py-4 rounded-full shadow-lg hover:bg-[#d87a2a] transition-colors duration-300"
-          href="CV_CarboniLeo.pdf" target="_blank" tabindex="0">
+          href="doc/CV_CarboniLeo.pdf" target="_blank" tabindex="0">
           <i class="fas fa-download mr-3">
           </i>
           Télécharger mon CV
@@ -212,7 +212,7 @@
             </div>
           </div>
         </a>
-        <a href="https://github.com/LeoC76/Blockchain" target="_blank" tabindex="0"
+        <a href="https://leoc76.github.io" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
           <img alt="Capture d'écran de mon portfolio" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
             src="images/blockchain.png" width="320" height="224" />
@@ -222,7 +222,7 @@
               Portfolio.
             </h3>
             <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed text-sm sm:text-base">
-              Mon portfolio, vous êtes actuellements dessus tdb.
+              Mon portfolio, vous êtes actuellements dessus.
             </p>
             <div class="text-[#f2994a] font-semibold flex items-center gap-2 text-base">
               <i class="fab fa-github text-xl"></i>
@@ -233,7 +233,7 @@
         <a href="https://github.com/Fearoxeuh/SLOOM" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
           <img alt="Capture d'écran d'un site web d'une entreprise factice"
-            class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/Portfolio.png" width="320"
+            class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/sloom.png" width="320"
             height="224" />
           <div class="p-6 flex flex-col h-full rounded-b-3xl">
             <h3
@@ -249,6 +249,25 @@
             </div>
           </div>
         </a>
+        <a href="doc/certif.pdf" target="_blank" tabindex="0"
+        class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
+        <img alt="Capture d'écran d'un site web d'une entreprise factice"
+          class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/sloom.png" width="320"
+          height="224" />
+        <div class="p-6 flex flex-col h-full rounded-b-3xl">
+          <h3
+            class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
+            Certif MOOC ANNSI
+          </h3>
+          <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed text-sm sm:text-base">
+            
+          </p>
+          <div class="text-[#f2994a] font-semibold flex items-center gap-2 text-base">
+            <i class="fab fa-github text-xl"></i>
+            Voir
+          </div>
+        </div>
+      </a>
         <a href="https://github.com/LeoC76/Cobian" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
           <img alt="Capture d'écran d'un tp blockchain" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
