ajout doc epreuve + lien

--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@
           </div>
         </div>
       </a>
-        <a href="https://github.com/LeoC76/Cobian" target="_blank" tabindex="0"
+        <a href="https://drive.google.com/file/d/13tMEmrA-qoGPv3IdZuqn4UbzWTOP16qR/view?usp=drive_link" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
           <img alt="Capture d'écran d'un tp blockchain" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
             src="images/cobian.png" width="320" height="224" />
@@ -324,7 +324,7 @@
             </div>
           </div>
         </a>
-        <a href="https://github.com/LeoC76/Pare-feu" target="_blank" tabindex="0"
+        <a href="https://drive.google.com/drive/folders/1C0F0hk3mXtMw9W43bTLE8t2cutsg3ghp?usp=drive_link" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
           <img alt="Capture d'écran d'un tp pare-feu"
             class="w-full h-56 sm:h-64 object-cover rounded-t-3xl" src="images/pare-feu.png" width="320"
@@ -351,7 +351,7 @@
         Documents epreuves :
       </h2>
       <div class="grid grid-cols-1 sm:grid-cols-3 gap-10 max-w-5xl mx-auto">
-      <a href="https://github.com/LeoC76/Blockchain" target="_blank" tabindex="0"
+      <a href="doc/grillecomp.pdf" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
           <img alt="Capture d'écran d'un tp blockchain" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
             src="images/grille.png" width="320" height="224" />
@@ -369,7 +369,7 @@
             </div>
           </div>
         </a>
-        <a href="https://github.com/LeoC76/Blockchain" target="_blank" tabindex="0"
+        <a href="doc/FicheSituationProSLAMleoprojetApplijava.pdf" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
           <img alt="Capture d'écran d'un tp blockchain" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
             src="images/fichepro.png" width="320" height="224" />
@@ -387,7 +387,7 @@
             </div>
           </div>
         </a>
-        <a href="https://github.com/LeoC76/Blockchain" target="_blank" tabindex="0"
+        <a href="doc/FicheSituationProSLAMleoprojetAppliwebPHP.pdf" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
           <img alt="Capture d'écran d'un tp blockchain" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
             src="images/fichepro.png" width="320" height="224" />
