fin veille -> avril 25

--- a/index.html
+++ b/index.html
@@ -1100,6 +1100,103 @@
 
         </div>
       </div>
+      <div class="space-y-4">
+        <button type="button" aria-expanded="false" aria-controls="rapportjav25"
+          class="w-full flex justify-between items-center bg-white rounded-3xl shadow-md p-5 font-semibold text-lg font-playfair text-[#1a1a1a] hover:bg-[#f2994a]/20 focus:outline-none focus:ring-4 focus:ring-[#f2994a] transition"
+          onclick="toggleAccordion(this)">
+          <span>Janvier 2025 Retour sur les projets d'IA : une année 2025 difficile
+          </span>
+          <svg class="w-6 h-6 text-[#f2994a] transition-transform duration-300" fill="none" stroke="currentColor"
+            stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+          </svg>
+        </button>
+        <div id="rapportjav25"
+          class="max-h-0 overflow-hidden bg-white rounded-b-3xl shadow-md p-5 text-[#1a1a1a]/90 leading-relaxed transition-[max-height] duration-500"
+          aria-hidden="true" style="display:none;">
+          <p>
+            Les entreprises font face à des défis majeurs dans leurs projets d'IA. Selon Forrester Research,
+            l'impatience envers l'IA générative, les échecs de projets et les retards dans l'« agentique » (agents
+            intelligents) marquent cette période. Un retour en force du prédictif est observé, incitant les
+            organisations à adopter des stratégies plus prudentes et réfléchies.
+            https://tw3partners.fr/fr/developper-competences-ere-ia/
+            https://www.lemagit.fr/actualites/366611376/Projets-dIA-lannee-2025-sannonce-difficile
+            https://www.lemagit.fr/dessins
+          </p>
+
+        </div>
+      </div>
+      <div class="space-y-4">
+        <button type="button" aria-expanded="false" aria-controls="rapportfev25"
+          class="w-full flex justify-between items-center bg-white rounded-3xl shadow-md p-5 font-semibold text-lg font-playfair text-[#1a1a1a] hover:bg-[#f2994a]/20 focus:outline-none focus:ring-4 focus:ring-[#f2994a] transition"
+          onclick="toggleAccordion(this)">
+          <span>Février 2025 France : soutien gouvernemental aux PME pour l'IA
+          </span>
+          <svg class="w-6 h-6 text-[#f2994a] transition-transform duration-300" fill="none" stroke="currentColor"
+            stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+          </svg>
+        </button>
+        <div id="rapportfev25"
+          class="max-h-0 overflow-hidden bg-white rounded-b-3xl shadow-md p-5 text-[#1a1a1a]/90 leading-relaxed transition-[max-height] duration-500"
+          aria-hidden="true" style="display:none;">
+          <p>
+            Le gouvernement français lance l'appel à projets « IA au service de l’efficience », visant à identifier et
+            promouvoir des projets IA réussis au sein des PME. Les projets sélectionnés seront présentés lors du Sommet
+            mondial de l'IA à Paris, en février 2025, mettant en lumière les réussites nationales dans le domaine.
+            https://www.lemagit.fr/actualites/366616427/IA-Generative-Bercy-lance-un-appel-a-projets-et-des-outils-pratiques-pour-les-PME
+          </p>
+
+        </div>
+      </div>
+      <div class="space-y-4">
+        <button type="button" aria-expanded="false" aria-controls="rapportmar25"
+          class="w-full flex justify-between items-center bg-white rounded-3xl shadow-md p-5 font-semibold text-lg font-playfair text-[#1a1a1a] hover:bg-[#f2994a]/20 focus:outline-none focus:ring-4 focus:ring-[#f2994a] transition"
+          onclick="toggleAccordion(this)">
+          <span>Mars 2025 Personnalisation avancée grâce à l'IA
+          </span>
+          <svg class="w-6 h-6 text-[#f2994a] transition-transform duration-300" fill="none" stroke="currentColor"
+            stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+          </svg>
+        </button>
+        <div id="rapportmar25"
+          class="max-h-0 overflow-hidden bg-white rounded-b-3xl shadow-md p-5 text-[#1a1a1a]/90 leading-relaxed transition-[max-height] duration-500"
+          aria-hidden="true" style="display:none;">
+          <p>
+            Les entreprises exploitent l'IA pour offrir une personnalisation ultra-précise de l'expérience utilisateur.
+            Des géants du e-commerce comme Amazon et Netflix adaptent leur contenu en fonction du comportement des
+            utilisateurs, augmentant ainsi l'engagement et la conversion. Cette tendance s'étend également aux offres
+            contextuelles basées sur l'historique d'achat et la localisation.
+            https://fr.linkedin.com/pulse/les-tendances-ia-à-suivre-en-2025-pour-optimiser-ikhbe?utm_source=chatgpt.com
+          </p>
+
+        </div>
+      </div>
+      <div class="space-y-4">
+        <button type="button" aria-expanded="false" aria-controls="rapportavr25"
+          class="w-full flex justify-between items-center bg-white rounded-3xl shadow-md p-5 font-semibold text-lg font-playfair text-[#1a1a1a] hover:bg-[#f2994a]/20 focus:outline-none focus:ring-4 focus:ring-[#f2994a] transition"
+          onclick="toggleAccordion(this)">
+          <span>Avril 2025 Agents virtuels autonomes : l'avenir de l'interaction client
+          </span>
+          <svg class="w-6 h-6 text-[#f2994a] transition-transform duration-300" fill="none" stroke="currentColor"
+            stroke-width="2" viewBox="0 0 24 24">
+            <path stroke-linecap="round" stroke-linejoin="round" d="M19 9l-7 7-7-7" />
+          </svg>
+        </button>
+        <div id="rapportavr25"
+          class="max-h-0 overflow-hidden bg-white rounded-b-3xl shadow-md p-5 text-[#1a1a1a]/90 leading-relaxed transition-[max-height] duration-500"
+          aria-hidden="true" style="display:none;">
+          <p>
+            Les agents virtuels autonomes, alimentés par l'IA conversationnelle, gèrent désormais des interactions
+            complexes avec les clients. Ils apprennent des comportements passés et anticipent les besoins, offrant une
+            expérience fluide et sans friction. Cette évolution transforme le parcours client et optimise les processus
+            de support.
+            www.linkedin.com/pulse/tendances-2025-lia-au-service-de-loptimisation-du-parcours-45eqf?utm_source=chatgpt%2Ecom&originalSubdomain=fr
+          </p>
+
+        </div>
+      </div>
     </section>
     <!-- Contact Section -->
     <section class="mb-24 max-w-3xl mx-auto" id="contact">
