--- a/index.html
+++ b/index.html
@@ -196,8 +196,8 @@
       <div class="grid grid-cols-1 sm:grid-cols-2 gap-10 max-w-5xl mx-auto">
         <a href="https://drive.google.com/drive/folders/1nQVfH5zGUZLSJsJrjizQd7IJ8xW2tn31?usp=drive_link" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
-          <img alt="Capture d'écran d'une appli de gestion de vente" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
-            src="images/blockchain.png" width="320" height="224" />
+          <img alt="Capture d'écran d'une ihm" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
+            src="images/IHM.png" width="320" height="224" />
           <div class="p-6 flex flex-col h-full rounded-b-3xl">
             <h3
               class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
@@ -214,19 +214,19 @@
         </a>
         <a href="https://drive.google.com/file/d/1BIh0nNFunk4AUFVsOEb8oouoL_jFgoNM/view?usp=sharing" target="_blank" tabindex="0"
           class="group block bg-white rounded-3xl shadow-lg overflow-hidden hover:shadow-2xl transition-shadow duration-300 focus:outline-none focus:ring-4 focus:ring-[#f2994a]">
-          <img alt="Capture d'écran d'un tp blockchain" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
-            src="images/blockchain.png" width="320" height="224" />
+          <img alt="Capture d'écran d'une appli de gestion de vente" class="w-full h-56 sm:h-64 object-cover rounded-t-3xl"
+            src="images/applicaisse.png" width="320" height="224" />
           <div class="p-6 flex flex-col h-full rounded-b-3xl">
             <h3
               class="text-2xl font-playfair font-semibold mb-3 text-[#1a1a1a] group-hover:text-[#f2994a] transition-colors duration-300">
-              TP Blockchain.
+              Stage Appli gestion de vente.
             </h3>
             <p class="text-[#1a1a1a]/80 flex-grow mb-6 leading-relaxed text-sm sm:text-base">
-              Un travaux pratique fait en cours à propos des technologies de la blockchain.
+              une appli de gestion de vente pour une petite boutique.
             </p>
             <div class="text-[#f2994a] font-semibold flex items-center gap-2 text-base">
               <i class="fab fa-github text-xl"></i>
-              Voir sur GitHub
+              Voir
             </div>
           </div>
         </a>
